# maude-cli

./: .gitignore  DATABASE_USAGE.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: publish_pypi.yml
data/: build.py
maudecli/: __init__.py  api.py  db.py  errors.py  field_validator.py  fields.py  formatters.py  utils.py
maudecli/resources/: READEME.txt
src/: __init__.py  api.py  errors.py
tests/: test_api.py  test_cli_integration.py  test_db.py  test_field_validator.py  test_formatters.py
