[project]
name = "maude-cli"
version = "0.1.0"
description = "Command-line interface to search MAUDE database for medical device adverse events via openFDA API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
maude-cli = "maudecli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ty>=0.0.1a19",
]
