[project]
name = "maude-cli"
version = "0.1.1"
description = "Command-line interface to search MAUDE database for medical device adverse events via openFDA API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
maude-cli = "maudecli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ty>=0.0.1a19",
]
